# fastjinja2templates

./: README.md  pyproject.toml  setup.py
fastjinja2templates/: __init__.py  fastjinja2templates.py
tests/: test_fastjinja2templates.py
