[tool.poetry]
name = "fastjinja2templates"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.88.0"
jinja2 = "^3.1.2"
pytest = "^7.2.0"
httpx = "^0.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
