[tool.poetry]
name = "fastjinja2templates"
version = "0.1.0"
description = ""
authors = ["Shuaib Mohammad <smartexpert@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.88.0"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
httpx = "^0.23.1"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
